# chatterbox

./: .gitignore  Cargo.toml  README.md  chatterbox-report.md  example_tts.py  pyproject.toml
src/: audio.rs  chatterbox.rs  error.rs  main.rs
src/chatterbox/: __init__.py  mtl_tts.py  tts.py  tts_turbo.py
src/chatterbox/models/s3gen/: decoder.py  f0_predictor.py  flow.py  flow_matching.py  hifigan.py  s3gen.py  xvector.py
src/chatterbox/models/s3gen/matcha/: decoder.py  flow_matching.py  transformer.py
src/chatterbox/models/s3gen/transformer/: activation.py  attention.py  convolution.py  embedding.py  encoder_layer.py  positionwise_feed_forward.py  subsampling.py  upsample_encoder.py
src/chatterbox/models/s3gen/utils/: intmeanflow.py
src/chatterbox/models/s3tokenizer/: __init__.py  s3tokenizer.py
src/chatterbox/models/t3/: __init__.py  llama_configs.py  t3.py
src/chatterbox/models/t3/inference/: alignment_stream_analyzer.py  t3_hf_backend.py
src/chatterbox/models/t3/modules/: cond_enc.py  learned_pos_emb.py  perceiver.py  t3_config.py
src/chatterbox/models/tokenizers/: __init__.py  tokenizer.py
src/models/: mod.rs  s3gen.rs  t3.rs  tokenizers.rs  voice_encoder.rs
src/models/s3gen/: flow.rs  hifigan.rs  mod.rs  speaker_encoder.rs  tokenizer.rs  weights.rs
src/models/s3gen/utils/: mask.rs  mel.rs  mod.rs
src/models/t3/: mod.rs  rust.rs
src/models/t3/inference/: alignment_stream_analyzer.rs  mod.rs  t3_hf_backend.rs
